@@ -1,2 +1,2 @@
 DIST jekyll-0.11.2.gem 53248 SHA256 99eca98958b700c8956eca7396addce926e05e989d3ea9230fff76653ca1baae SHA512 67e0391e043ac5e825835a09e3099c90460d133979036d7ad9d9017befda935a42015e7e42566fbd9092beef3da5f5a0fb63dbe3d59962bd4cc240445b5f123d WHIRLPOOL 44f5ab25b627476e39d1a1ffb55a21ba2553b80c7ddb066c5b4cadd46d39cbed36202100efb0a131f04ad86ab77372a88909669db2cba1b8fa3650f385e6c131
-DIST jekyll-1.1.2.gem 246784 SHA256 5c41e20fbc42ba0298c252b013db79301411a6f9080b2675d900b5577037d460 SHA512 9d419e4ff847eb04a9ab58a5da4fa0a29174e3890315edeb87bb4e31355f9816909377cee9ffcd97f6aad606a42c780402a057d95eb3e5bbbd08e032fb9ae89d WHIRLPOOL 826975566fc2e35e3ff064a9d41f946a0d3c40487b9263e52fa55197f641dcbded146e80863e150df0faba35178d715f4aa99b288cd43fb16035cbea8bfd5fc6
+DIST jekyll-1.2.0.gem 250880 SHA256 6a5002c5e4cfc87d2064e6c5a881b5d8b805cdc26a511afc118748b723d814bc SHA512 8d2cc51d3960e6c401a85e4f1eeb2d1d50ab63798effabdb97afc56ab895a0e182a41b1ab7ce81af31bda6b724fa14856491302e81159c5bfcb7d0d675b5c22e WHIRLPOOL 57a780cb4a5de66856044346a2a513eb45adb6f0256b25b5bb9a51afcdce1b17c0aa6d6ab00cdc11585ec0ffe4c19d652686176fd5307f0b19a948cee0bd6c84
